m/k/k3d-dfd-cluster-famfan/patch-service-mastodon-apache.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: mastodon-apache
  namespace: famfan
spec:
  type: ClusterIP
  externalTrafficPolicy: null
